# Django_Music_backend

./: .gitignore  README.md  manage.py  pyproject.toml
django_music_backend/: asgi.py  settings.py  urls.py  wsgi.py
music/: admin.py  models.py  serializers.py  style_models.py  tests.py  urls.py  views.py
music/migrations/: 0001_initial.py
templates/admin/: base_site.html
